# Projekt-HerbalSuite

./: .env  .env.example  README.md  ROADMAP.md  dev.db  herbalsuite_gui.py  main.py  pyproject.toml
Projektdokumente/: HerbalSuite_Businessplan.txt  HerbalSuite_Finanzübersicht.txt  Praxissoftware_Structure_Timo_Hertling.txt
Roadmap_automatic/: herbalsuite_roadmap_to_issues.py
app/ui/: AppShell.qml
diagnosis_assistant/: __init__.py
herbal_database/: __init__.py
integration/: __init__.py
inventory_management/: __init__.py
notifications/: __init__.py
patches/: app.py.diff
reporting/: __init__.py
scripts/: run_dev.py
settings/: __init__.py
src/herbalsuite/: app.py
src/herbalsuite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/herbalsuite/config/: default.yml
src/herbalsuite/data/: db.py  migrate.py  models.py
src/herbalsuite/plugins/: __init__.py  patients.py  start.py
src/herbalsuite/ui/: main_window.py  patient_dialog.py  patient_table_model.py
treatment_planner/: __init__.py
user_management/: __init__.py
